[project]
authors = [{name = "alstonlo"}]
dependencies = []
description = "Adds a (line) break after class (headers)."
license = {text = "MIT"}
name = "recess"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
recess = "recess:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
recess = { path = ".", editable = true }

[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.feature.dev.tasks]
test = "pytest test_recess.py"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.2,<10"
ruff = ">=0.15.7,<0.16"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
